# FreeCastNotes

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md  SPEC-FreeCastNotes.md  freecastnotes-backlog 20.36.16.md  index.html  package-lock.json  package.json  pencil-new.pen  test-electron.cjs  test-electron.mjs  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
.omx/: metrics.json
.omx/logs/: turns-2026-02-24.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
electron-src/: main.ts  preload.ts  shortcuts.ts  storage.ts  tray.ts  window.ts
scripts/: bundle-app.sh
src/: AGENTS.md  App.tsx  PreferencesApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AGENTS.md
src/components/ActionPanel/: ActionPanel.tsx  actions.ts
src/components/Editor/: Editor.tsx  FindBar.tsx  FormatBar.tsx  styles.css
src/components/NotesBrowser/: NoteItem.tsx  NotesBrowser.tsx
src/components/NotesSidebar/: NotesSidebar.tsx
src/components/PreferencesPanel/: PreferencesPanel.tsx
src/components/TagBar/: TagBar.tsx
src/hooks/: useEditor.ts
src/lib/: AGENTS.md  bridge.ts  db.ts  export.ts  exportAll.ts  imageUtils.ts  import.ts  migration.ts  utils.ts  vaultDb.ts
src/scripts/: bundle-app.sh  create-dmg.sh  update-version.sh
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
swift-app/: AGENTS.md  Info.plist  Package.swift
swift-app/Resources/: icon.icns
(+18 files in other folders)
